test/sema/declref.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): void {}

fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:5: error: expected to call function 'foo'
    foo;
    
    // CHECK: [[# @LINE + 1 ]]:5: error: symbol 'y' not found
    y;

    foo();
}

fn bar(x: number): void {
    x;

    // CHECK: [[# @LINE + 1 ]]:6: error: calling non-function symbol
    x();
}
